Make step to print out test results so I can see that they are actually there

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,9 @@ steps:
 - script: docker rm -fv pipelines-python-docker-test-container
   displayName: 'Remove the container'
 
+- script: cat test-results.xml
+  displayName: 'View test results'
+
 - script: |
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
